[metadata]
name = mqttsn
version = 0.0.2
description = Python client based on Eclipse RSMB client for MQTT-SN brokers
long_description = file: README.md
author = Luan Guimarães Lacerda
author_email = luan@live.in
url = https://github.com/luanguimaraesla/mqttsn
keywords =
  iot
  mosquitto
  mqtt
  mqttsn
  mqtt-sn
  message
  queue
  pipeline
  sensors
  network
  udp
  protocol
license = MIT License
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Operating System :: POSIX
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries

[options]
zip_safe = False
platforms = any
include_package_data = True
install_requires =
  paho-mqtt
setup_requires =
	setuptools >= 30.3.0

[options.extras_require]
dev =
	pytest
	pytest-cov
	coverage
	flake8
  bumpversion
docs =
	docutils
	sphinx-autobuild

[flake8]
ignore = E501, E731
exclude = .tox,.git,__pycache__,docs/conf.py,build,dist,tests,src/**/__init__.py,src/**/all.py
max-complexity = 10

[pep8]
ignore = E501,E731
max-line-length = 80
